--- a/src/pages/home/home.scss
+++ b/src/pages/home/home.scss
@@ -1,3 +1,275 @@
-page-home {
-
+.home {
+    font-family: arial;
+    .card-md ion-card-content {
+        padding: 0px;
+    }
+    .home-banners {
+        ion-slides {
+            width: 100%;
+            height: auto;
+            margin-bottom: -5px;
+        }
+        img {
+            min-height: $min-banner-height;
+        }
+    }
+    .main-categories {
+        ion-card-content {
+            padding: 0px;
+        }
+        ion-label {
+            margin-left: 5px;
+        }
+        ion-card {
+            margin: 0px;
+            width: 100%;
+        }
+        .row.unlimited-items {
+            flex-wrap: wrap;
+            padding-left: 5px;
+        }
+        .row.unlimited-items .col {
+            flex: none;
+            width: 50%;
+            padding: 5px 5px 0 0;
+        }
+        @media (min-width: 481px) and (max-width: 768px) {
+            .row.unlimited-items .col {
+                width: 33.333%;
+            }
+            ion-col:nth-child(3n+0) {
+                border-right: none;
+            }
+        }
+        @media (min-width: 769px) and (max-width: 1024px) {
+            .row.unlimited-items .col {
+                width: 25%;
+            }
+            ion-col:nth-child(4n+0) {
+                border-right: none;
+            }
+        }
+        @media (min-width: 1025px) {
+            .row.unlimited-items .col {
+                width: 20%;
+            }
+            ion-col:nth-child(5n+0) {
+                border-right: none;
+            }
+        }
+        img {
+            min-height: $min-home-category-height;
+        }
+    }
+    .scroll-content {
+        padding-bottom: 10px;
+    }
+    .shop-name {
+        margin: 0;
+        .label {
+            margin: 12px 0;
+        }
+        .item {
+            background-color: #f4f4f4;
+        }
+    }
+    .products-listing {
+        .grid {
+            padding: 0;
+        }
+        .wishlist-button-grid {
+            position: absolute;
+            top: 2px;
+            left: 20px;
+            font-size: 1.5em;
+            margin: 0.4rem -5px;
+        }
+        padding-top: 0;
+        .price-list {
+            margin: 0px;
+            padding-left: 10px;
+            box-shadow: none;
+            ion-label {
+                margin: 0px;
+                font-size: 14px;
+                white-space: inherit;
+            }
+            button {
+                margin: 0px;
+            }
+            .price-regular {
+                color: #f53d3d;
+                margin-top: 0px;
+            }
+            .price-special {
+                color: #f53d3d;
+                margin-top: 0px;
+            }
+            .price-delete {
+                color: #666;
+                opacity: 60;
+                margin-top: 0px;
+            }
+        }
+        .item-name {
+            box-shadow: 0 0.5px 1px rgba(0, 0, 0, 0.3);
+            background-color: #f2f2f2;
+            padding: 0 0 0 16px;
+            .item.item-block .item-inner {
+                padding-right: 0;
+            }
+        }
+        .row.unlimited-items {
+            flex-wrap: wrap;
+            padding-left: 5px;
+        }
+        .row.unlimited-items .col {
+            flex: none;
+            width: 50%;
+            padding: 5px 5px 0 0;
+        }
+        @media (min-width: 481px) and (max-width: 768px) {
+            .row.unlimited-items .col {
+                width: 33.333%;
+            }
+            ion-col:nth-child(3n+0) {
+                border-right: none;
+            }
+        }
+        @media (min-width: 769px) and (max-width: 1024px) {
+            .row.unlimited-items .col {
+                width: 25%;
+            }
+            ion-col:nth-child(4n+0) {
+                border-right: none;
+            }
+        }
+        @media (min-width: 1025px) {
+            .row.unlimited-items .col {
+                width: 20%;
+            }
+            ion-col:nth-child(5n+0) {
+                border-right: none;
+            }
+        }
+        .item-list {
+            .label {
+                margin-top: 0;
+            }
+            margin: 5px 5px 0 5px;
+            ion-item {
+                box-shadow: 0 0.5px 1px rgba(0, 0, 0, 0.3);
+                padding: 0 0 0 16px;
+            }
+            .stock-list {
+                .out-of-stock-button {
+                    position: absolute;
+                    top: 2px;
+                    left: 0;
+                    width: 80px;
+                    font-size: 8px;
+                    margin: 0.4rem -5px;
+                }
+            }
+            .wishlist-label {
+                position: absolute;
+                right: 14px;
+                top: 2px;
+                padding-left: 0;
+                width: 20%;
+            }
+            .product-label {
+                position: absolute;
+                top: 2px;
+                padding-left: 0;
+                width: 70%;
+            }
+            .wishlist-button {
+                float: right;
+                padding: 0;
+                margin: 0;
+                font-size: 1.5em;
+            }
+            .product-name-top {
+                top: 12px;
+                h2 {
+                    margin: 2px 0 8px 0;
+                    font-size: 14px;
+                    font-weight: normal;
+                    overflow: hidden;
+                    text-overflow: ellipsis;
+                    width: 70%;
+                }
+            }
+            .price-bottom-list {
+                position: absolute;
+                bottom: 12px;
+                left: inherit;
+                .price-regular {
+                    color: #f53d3d;
+                }
+                .price-special {
+                    color: #f53d3d;
+                }
+                .price-delete {
+                    color: #666;
+                    opacity: 60;
+                }
+            }
+            .bottom-right-button {
+                position: absolute;
+                bottom: 8px;
+                right: 10px;
+                button {
+                    margin: 0px;
+                    border-radius: 5px;
+                }
+            }
+            .left-padding {
+                padding: 0px;
+            }
+        }
+        .card-background-page {
+            ion-card {
+                position: relative;
+                text-align: center;
+                margin: 0;
+                width: 100%;
+            }
+            .card-title {
+                position: absolute;
+                top: 80%;
+                font-size: 12px;
+                width: 100%;
+                font-weight: 500;
+                color: #fff;
+            }
+            .card-subtitle {
+                font-size: 1.0em;
+                position: absolute;
+                top: 52%;
+                width: 100%;
+                color: #fff;
+            }
+            .stock {
+                padding: 0;
+                button {
+                    position: absolute;
+                    top: 2px;
+                    right: 0;
+                    width: 50%;
+                    font-size: 10px;
+                    margin: 0.4rem -5px;
+                }
+            }
+            .card-name {
+                .label {
+                    font-weight: 500;
+                    margin: 8px 8px 0px;
+                    font-size: 15px;
+                    letter-spacing: 0.3px;
+                }
+            }
+        }
+    }
 }
